# python_homework

./: .gitignore  Dockerfile  README.md  load_db.py  pyproject.toml  requirements.txt
app/: __init__.py  analytics.py  audit_log.py  auth.py  bulk_update.py  comments.py  dashboard.py  database.py  exporters.py  history.py  importers.py  models.py  notifications.py  permissions.py  reports.py  search.py  tickets.py  users.py  validators.py  workflow.py
assignment1/: assignment1-test.py  assignment1.py
assignment10/: advanced_sql.py
assignment11/: cumulative.py  cumulative_revenue.csv  dashboard.py  employee_results.csv  employee_results.py  reflection.txt  requirements.txt  service_urls.txt  wind.py
assignment2/: assignment2-test.py  assignment2.py
assignment3/: extend-point-to-vector.py  hangman-closure.py  log-decorator.py  tictactoe.py  type-decorator.py
assignment4/: additional_employees.json  assignment4-test.py  assignment4.py
assignment5/: CTD_Assignment_5.ipynb  CTD_Python_Data_Pipeline_Starter.ipynb  notebookd7248daa45.ipynb
assignment6/: CTD_Assignment_6.ipynb  CTD_Python_Data_Pipeline.ipynb  notebookd7248daa45.ipynb
assignment7/: CTD_Assignment_7.ipynb  README.md
assignment8/: challenges.txt  ethical_scraping.txt  get_books.csv  get_books.json  get_books.py  owasp_top_10.csv
assignment9/: sql_intro.py  sql_intro_2.py
data/: sample_tickets.csv
db/: lesson.db
selenium_scraping_project/: README.md  app.py  clean_data.py  presentation_script.txt  requirements.txt  scraper.py
tests/: test_analytics_export_bulk.py  test_auth_permissions.py  (+7 more)
(+7 files in other folders)
