[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caseflow-qa-tracker"
version = "0.1.0"
description = "A lightweight QA ticket tracking tool for support teams."
requires-python = ">=3.11"
dependencies = ["pandas==2.2.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
